--- a/otp.html
+++ b/otp.html
@@ -48,22 +48,14 @@
 
     <script type="module">
 
-        // Import the functions you need from the SDKs you need
-       // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
+        Import the functions you need from the SDKs you need
+       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+        TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Your web app's Firebase configuration
-        // var firebaseConfig = {
-        //     apiKey: "AIzaSyAEo33usa0f9r04bAQZEzte5Frg5-DdPuk",
-        //     authDomain: "djsign-139c5.firebaseapp.com",
-        //     projectId: "djsign-139c5",
-        //     storageBucket: "djsign-139c5.appspot.com",
-        //     messagingSenderId: "12735367347",
-        //     appId: "1:12735367347:web:9943808c59cba02dbdc8c6",
-        //     measurementId: "G-RVXGTMD636"
-        // };
-        // Import the functions you need from the SDKs you need
+//         Your web app's Firebase configuration
+        
+        Import the functions you need from the SDKs you need
  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
 // import { getAnalytics } from "firebase/analytics";
 // // TODO: Add SDKs for Firebase products that you want to use
@@ -82,7 +74,7 @@ const firebaseConfig = {
 };
 
 // Initialize Firebase
-//const app = initializeApp(firebaseConfig);
+// const app = initializeApp(firebaseConfig);
 // const analytics = getAnalytics(app);
 
 
@@ -131,8 +123,8 @@ const firebaseConfig = {
         })
 
 
-        verifyotp.onclick = function () {
-            confirmationResult.confirm(otpinput.value).then(function (response) {
+//         verifyotp.onclick = function () {
+//             confirmationResult.confirm(otpinput.value).then(function (response) {
 
 
                 // var userobj = response.user;
@@ -140,11 +132,11 @@ const firebaseConfig = {
                 // var provider = "phone";
                 // var email = phoneinput.value;
 
-            })
-                .catch(function (error) {
-                    console.log(error);
-                })
-        }
+//             })
+//                 .catch(function (error) {
+//                     console.log(error);
+//                 })
+//         }
     }  
     </script>
 
